# mesh-generator

./: .gitignore  README.md  debug_async.py  inspect_internal.py  inspect_sig.py  inspect_tripo.py  jewelry_prompts.py  main.py  mesh_processor.py  pyproject.toml  tripo_client.py  view_model.py
